<resources>
    <string name="app_name">folder launcher</string>
    <string name="select_appfile_button">app</string>
    <string name="select_folder_button">folder</string>
    <string name="display_name">display name</string>
    <string name="create">create</string>
    <string name="action_delete">delete</string>
    <string name="action_move_up">move up</string>
    <string name="action_move_down">move down</string>
    <string name="action_move_mode">drag mode</string>
    <string name="move_mode_exit">X</string>
    <string name="move_mode_persist_failed">couldn\'t save item order</string>
    <string name="search">search</string>
    <string name="action_change_icon">change icon</string>
    <string name="action_change_name">change name</string>
    <string name="select_icon_button">app icon</string>
    <string name="select_primary_color_button">primary color</string>
    <string name="select_secondary_color_button">secondary color</string>
    <string name="select_tertiary_color_button">tertiary color</string>
    <string name="select_no_icon_button">no icon</string>
    <string name="select_widget_button">widget</string>
    <string name="new_name">new name</string>
    <string name="action_add_widget">widget</string>
    <string name="action_add_file">file/folder</string>
    <string name="widget_add_widget">widget</string>
    <string name="widget_new_row">new row</string>
    <string name="widget_add_to_row">add to row</string>
    <string name="action_settings">settings</string>
</resources>
