<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:theme="@style/Theme.MyLauncher"
    tools:context=".WidgetSetupActivity">

    <LinearLayout
        android:id="@+id/widget_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp" />

    <GridLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/add_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_button_bg"
            android:text="@string/widget_add_widget" />

        <Button
            android:id="@+id/add_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_button_bg"
            android:text="@string/widget_new_row" />

        <Button
            android:id="@+id/add_widget_to_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_button_bg"
            android:text="@string/widget_add_to_row" />
    </GridLayout>

</RelativeLayout>