<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".EditFileIconActivity">

    <Button
        android:id="@+id/select_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_primary_color_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/select_icon_button" />

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignTop="@id/select_icon_button"
        android:layout_alignBottom="@id/select_icon_button"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/select_icon_button" />

    <Button
        android:id="@+id/select_primary_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_secondary_color_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/select_primary_color_button" />

    <ImageView
        android:id="@+id/primary_color_image"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignTop="@id/select_primary_color_button"
        android:layout_alignBottom="@id/select_primary_color_button"
        android:layout_toStartOf="@id/select_primary_color_button" />

    <Button
        android:id="@+id/select_secondary_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_tertiary_color_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/select_secondary_color_button" />

    <ImageView
        android:id="@+id/secondary_color_image"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignTop="@id/select_secondary_color_button"
        android:layout_alignBottom="@id/select_secondary_color_button"
        android:layout_toStartOf="@id/select_secondary_color_button" />

    <Button
        android:id="@+id/select_tertiary_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_no_icon_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/select_tertiary_color_button" />

    <ImageView
        android:id="@+id/tertiary_color_image"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignTop="@id/select_tertiary_color_button"
        android:layout_alignBottom="@id/select_tertiary_color_button"
        android:layout_toStartOf="@id/select_tertiary_color_button" />

    <Button
        android:id="@+id/select_no_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/select_no_icon_button" />

</RelativeLayout>